# djmkv

./: .gitignore  Dockerfile  README.md  pyproject.toml  sample-compose.yaml
src/djmkv/: database.py  mqtt_wrapper.py  ripper.py
src/djmkv/disk_driver/: cdrom.py  drive.py  events.py  sources.py
