[tool.poetry]
name = "djmkv"
version = "0.1.0"
description = ""
authors = ["The Randalorian <dwjgame11@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
sqlalchemy = "^2.0.36"
psycopg = {extras = ["binary", "pool"], version = "^3.2.5"}
aiomqtt = "^2.3.0"
aiofiles = "^24.1.0"

[tool.poetry.group.dev.dependencies]
black = "==25.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
